# reserving

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/bornhuetter_ferguson/: index.html
api/cape_cod/: index.html
api/chain_ladder/: index.html
api/plot/: index.html
api/triangle/: index.html
docs/: index.md  quickstart.md
docs/api/: bornhuetter_ferguson.md  cape_cod.md  chain_ladder.md  plot.md  triangle.md
quickstart/: index.html
reserving/: __init__.py  plot.py  triangle.py
reserving/methods/: bornhuetter_ferguson.py  cape_cod.py  chain_ladder.py
search/: search_index.json
tests/: conftest.py  test_bornhuetter_ferguson.py  test_cape_cod.py  test_chain_ladder.py  test_triangle.py
