[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actuarial-reserving"
version = "0.1.0"
description = "P&C loss reserve estimation — chain-ladder, BF, and Cape Cod with bootstrap CIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/dyjang83/reserving"
Documentation = "https://dyjang83.github.io/reserving"

[tool.hatch.build.targets.wheel]
packages = ["reserving"]